--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@
 
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-weight: 400;
   font-style: normal;
   src: local(''), url('./fonts/Inter-Regular.woff2') format('woff2');
@@ -109,6 +110,7 @@
 
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-weight: 500;
   font-style: normal;
   src: local(''), url('./fonts/Inter-Medium.woff2') format('woff2');
@@ -116,6 +118,7 @@
 
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-weight: 600;
   font-style: normal;
   src: local(''), url('./fonts/Inter-Bold.woff2') format('woff2');
