--- a/src/_common/components/Button/Button.css
+++ b/src/_common/components/Button/Button.css
@@ -22,6 +22,11 @@
     background: var(--tw-gray-10);
   }
 
+  &:disabled {
+    color: var(--tw-gray-40);
+    background: var(--tw-gray-20);
+  }
+
   & > svg + span,
   & > span + svg {
     margin-left: var(--pd-4);
@@ -83,5 +88,14 @@
 
   & .child {
     visibility: hidden;
+  }
+}
+
+.primary {
+  color: var(--tw-gray-20);
+  background: var(--tw-primary);
+
+  &:hover {
+    background: var(--tw-primary-dark);
   }
 }
