--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,13 @@
   src: local(''), url('fonts/space-grotesk-600.woff2') format('woff2');
 }
 
+@font-face {
+  font-family: 'Recoleta';
+  font-weight: 600;
+  font-style: normal;
+  src: local(''), url('fonts/recoleta-600.woff2') format('woff2');
+}
+
 *,
 *::before,
 *::after {
