--- a/src/signup/SignUp.css
+++ b/src/signup/SignUp.css
@@ -1,5 +1,5 @@
 .root {
-  min-height: calc(100vh - 40px);
+  min-height: 100vh;
   padding: var(--pd-48) var(--pd-24);
   background: var(--tw-gray-10);
 
