--- a/src/app/components/Page/Page.css
+++ b/src/app/components/Page/Page.css
@@ -8,7 +8,7 @@
   padding: var(--pd-24);
   background: var(--tw-white);
 
-  @media (min-width: 768px) {
+  @media (--bp-medium) {
     padding: var(--pd-40) var(--pd-48) var(--pd-16);
     background: var(--tw-white);
   }
