--- a/src/onboarding/Onboarding.css
+++ b/src/onboarding/Onboarding.css
@@ -1,13 +1,27 @@
 .sidebar {
   display: flex;
-  width: 264px;
+  width: 100%;
   height: 100%;
-  flex-direction: column;
+  padding: var(--pd-48) var(--pd-24) var(--pd-24);
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+
+  @media (--bp-medium) {
+    width: 264px;
+    padding: 0;
+    align-items: inherit;
+    flex-direction: column;
+    justify-content: inherit;
+  }
 }
 
 .header {
-  padding: var(--pd-40) var(--pd-32) var(--pd-24);
   flex-shrink: 0;
+
+  @media (--bp-medium) {
+    padding: var(--pd-40) var(--pd-32) var(--pd-24);
+  }
 }
 
 .steps {
@@ -16,9 +30,12 @@
 
 .footer {
   display: flex;
-  padding: var(--pd-40) var(--pd-32);
   align-items: center;
   flex-shrink: 0;
+
+  @media (--bp-medium) {
+    padding: var(--pd-40) var(--pd-32);
+  }
 }
 
 .user {
@@ -31,7 +48,7 @@
 .content {
   padding: 0 var(--pd-24) var(--pd-24);
 
-  @media (min-width: 768px) {
+  @media (--bp-medium) {
     padding: var(--pd-16) var(--pd-48) var(--pd-24);
   }
 }
