[CAP-86] Added error styles for common components

--- a/src/_common/components/Input/Input.css
+++ b/src/_common/components/Input/Input.css
@@ -15,6 +15,10 @@
   }
 }
 
+.error:not(.disabled) {
+  border-color: var(--tw-red);
+}
+
 .disabled {
   &:hover {
     border-color: var(--tw-gray-30);
