--- a/src/_common/components/Select/Select.css
+++ b/src/_common/components/Select/Select.css
@@ -66,6 +66,10 @@
   display: block;
   list-style: none;
   width: 100%;
+  max-height: 260px;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
