[CAP-91] Added Plaid integration

--- a/src/onboarding/components/BankAccount/BankAccount.css
+++ b/src/onboarding/components/BankAccount/BankAccount.css
@@ -4,6 +4,17 @@
   align-items: flex-start;
   border: 1px solid var(--tw-gray-30);
   border-radius: var(--radius-10);
+  transition: background-color 0.3s, border-color 0.3s;
+  cursor: pointer;
+
+  &:hover:not(.selected) {
+    border-color: var(--tw-primary);
+  }
+}
+
+.selected {
+  background-color: var(--tw-blue-light);
+  border-color: var(--tw-primary);
 }
 
 .icon {
