--- a/src/onboarding/components/TransferMoney/TransferMoney.css
+++ b/src/onboarding/components/TransferMoney/TransferMoney.css
@@ -8,6 +8,12 @@
   }
 }
 
+.account {
+  &:not(:last-of-type) {
+    margin-bottom: var(--pd-8);
+  }
+}
+
 .button {
   margin-top: var(--pd-24);
 }
