--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@
   --z-index-side: 100;
   --z-index-modal: 1000;
   --z-index-dropdown: 1050;
-  --z-index-notification: 1100;
+  --z-index-messages: 1100;
 }
 
 :root,
