[CAP-154] Added Issue Card page

--- a/src/app/components/Section/Section.css
+++ b/src/app/components/Section/Section.css
@@ -10,12 +10,14 @@
 
 .header {
   margin-bottom: var(--pd-24);
-  flex-grow: 1;
   flex-shrink: 0;
 
   @media (--bp-large) {
     width: 240px;
-    max-width: 320px;
+  }
+
+  @media (--bp-wide) {
+    width: 320px;
   }
 }
 
