--- a/src/media.css
+++ b/src/media.css
@@ -2,3 +2,4 @@
 
 @custom-media --bp-medium (min-width: 768px);
 @custom-media --bp-large (min-width: 1024px);
+@custom-media --bp-wide (min-width: 1200px);
