--- a/src/app/containers/Overview/Overview.css
+++ b/src/app/containers/Overview/Overview.css
@@ -3,7 +3,7 @@
   padding: var(--pd-16) var(--pd-24);
 
   @media (--bp-medium) {
-    padding: var(--pd-16) var(--pd-48);
+    padding: 0 var(--pd-48);
   }
 }
 
