--- a/src/allocations/components/AllocationSelect/AllocationSelect.css
+++ b/src/allocations/components/AllocationSelect/AllocationSelect.css
@@ -1,15 +1,5 @@
-.value {
-  display: flex;
-  width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.name {
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.amount {
-  color: var(--tw-primary);
+.popup {
+  @media (--bp-medium) {
+    min-width: 400px;
+  }
 }
