--- a/src/_common/components/Button/Button.css
+++ b/src/_common/components/Button/Button.css
@@ -6,6 +6,7 @@
 .root {
   display: inline-flex;
   height: v-size-md;
+  margin: 0;
   padding: 0 var(--pd-12);
   align-items: center;
   justify-content: center;
