--- a/src/app/components/SpendingByWidget/SpendingByWidget.css
+++ b/src/app/components/SpendingByWidget/SpendingByWidget.css
@@ -1,7 +1,10 @@
 .content {
   display: grid;
-  grid-template-columns: 1fr auto;
   grid-gap: var(--pd-16);
+
+  @media (--bp-medium) {
+    grid-template-columns: 1fr auto;
+  }
 }
 
 .list {
@@ -37,4 +40,9 @@
 .amount {
   font-weight: var(--font-500);
   text-align: right;
+}
+
+.chart {
+  align-self: center;
+  justify-self: center;
 }
