[CAP-154] Added Drawer component and ability to create a user from Create Card page

--- a/src/_common/components/Button/Button.css
+++ b/src/_common/components/Button/Button.css
@@ -116,6 +116,11 @@
   &:hover {
     background: var(--tw-primary-dark);
   }
+
+  &:disabled {
+    color: var(--tw-gray-40);
+    background: var(--tw-gray-20);
+  }
 }
 
 .primary-ghost {
