--- a/src/app/containers/Overview/Overview.css
+++ b/src/app/containers/Overview/Overview.css
@@ -35,7 +35,7 @@
 }
 
 .transaction-title {
-  margin: var(--pd-32) 0 var(--pd-16);
+  margin: var(--pd-32) 0;
   font-family: var(--font-header);
   font-size: var(--text-20);
   line-height: var(--line-28);
