--- a/src/app/components/AccessInfo/AccessInfo.css
+++ b/src/app/components/AccessInfo/AccessInfo.css
@@ -18,7 +18,7 @@
 
 .header {
   margin: 0;
-  font-family: var(--font-special);
+  font-family: var(--font-header);
   font-size: var(--text-28);
   line-height: var(--line-36);
   letter-spacing: var(--ls-small);
