--- a/src/app/components/Page/Page.css
+++ b/src/app/components/Page/Page.css
@@ -42,9 +42,9 @@
 
 .title {
   margin: 0;
-  font-family: var(--font-special);
+  font-family: var(--font-header);
   font-size: var(--text-28);
-  font-weight: var(--font-600);
+  font-weight: var(--font-700);
   line-height: var(--line-36);
 }
 
