--- a/src/signup/components/Header/Header.css
+++ b/src/signup/components/Header/Header.css
@@ -1,8 +1,8 @@
 .root {
   margin: 0 0 var(--pd-16);
-  font-family: var(--font-special);
+  font-family: var(--font-header);
   font-size: var(--text-28);
-  font-weight: var(--font-600);
+  font-weight: var(--font-700);
   line-height: var(--line-36);
   letter-spacing: var(--ls-small);
 }
