--- a/src/_common/components/Message/Message.css
+++ b/src/_common/components/Message/Message.css
@@ -14,11 +14,11 @@
 }
 
 .error {
-  color: var(--tw-red);
+  color: var(--tw-red-70);
 }
 
 .success {
-  color: var(--tw-green);
+  color: var(--tw-green-70);
 }
 
 .content {
