--- a/src/app/components/MainMenu/MainMenu.css
+++ b/src/app/components/MainMenu/MainMenu.css
@@ -32,7 +32,7 @@
 .active {
   color: var(--tw-black);
   background-color: var(--tw-gray-20);
-  border-right-color: var(--tw-primary);
+  border-right-color: var(--tw-black);
 }
 
 .title {
