--- a/src/app/components/SpendWidget/SpendWidget.css
+++ b/src/app/components/SpendWidget/SpendWidget.css
@@ -5,7 +5,7 @@
 }
 
 .total {
-  color: var(--tw-primary);
+  color: var(--tw-black);
   font-size: var(--text-16);
   line-height: var(--line-24);
 }
