--- a/src/_common/components/Checkbox/Checkbox.css
+++ b/src/_common/components/Checkbox/Checkbox.css
@@ -11,8 +11,8 @@
 
 .control {
   @nest .input:checked + & {
-    background-color: var(--tw-primary);
-    border-color: var(--tw-primary);
+    background-color: var(--tw-primary-bg);
+    border-color: var(--tw-primary-bg);
 
     &::after {
       opacity: 1;
