--- a/src/_common/components/InputDate/Month.css
+++ b/src/_common/components/InputDate/Month.css
@@ -58,9 +58,7 @@
   height: 24px;
   align-items: center;
   justify-content: center;
-  font-family: var(--font-header);
   font-size: var(--text-12);
-  font-weight: var(--font-700);
   line-height: var(--line-16);
   background: transparent;
   border: 1px solid transparent;
@@ -69,13 +67,13 @@
   cursor: pointer;
 
   &:hover {
-    background: var(--tw-blue-light);
-    border-color: var(--tw-blue-20);
+    background: var(--tw-primary-light);
+    border-color: var(--tw-primary-border);
   }
 }
 
 .active {
-  background: var(--tw-blue-light);
-  border-color: var(--tw-blue-20);
+  background: var(--tw-gray-10);
+  border-color: var(--tw-gray-20);
   pointer-events: none;
 }
