--- a/src/_common/components/Button/Button.css
+++ b/src/_common/components/Button/Button.css
@@ -10,6 +10,7 @@
   padding: 0 var(--pd-12);
   align-items: center;
   justify-content: center;
+  color: var(--tw-black);
   font: inherit;
   vertical-align: middle;
   background: var(--tw-gray-20);
@@ -18,7 +19,7 @@
   transition: background-color 0.3s, color 0.3s;
 
   &:hover {
-    background: var(--tw-gray-10);
+    background: var(--tw-gray-30);
   }
 
   &:disabled {
@@ -97,8 +98,12 @@
   color: var(--tw-gray-60);
   background-color: transparent;
 
+  &:hover {
+    background-color: var(--tw-gray-10);
+  }
+
   &:disabled {
-    background: transparent;
+    background-color: transparent;
   }
 }
 
@@ -114,7 +119,11 @@
   color: var(--tw-primary-content);
   background-color: transparent;
 
+  &:hover {
+    background-color: var(--tw-gray-10);
+  }
+
   &:disabled {
-    background: transparent;
+    background-color: transparent;
   }
 }
