--- a/src/_common/components/Tabs/Tab.css
+++ b/src/_common/components/Tabs/Tab.css
@@ -1,6 +1,7 @@
 .root {
   margin: 0;
   padding: 0 0 var(--pd-12);
+  color: var(--tw-black);
   font-family: var(--font-header);
   font-size: inherit;
   line-height: inherit;
